# Jarvis

./: .coverage  .env.example  .gitignore  CLAUDE.md  Descritivo_Jarvis.docx  Dockerfile  Jarvis.py  LICENSE  ProjectConfig.py  README.md  Speak_to_Text.py  Teste_Jarvis.py  Vision_AI.ipynb  Vision_AI.py  control.py  coverage.xml  gravacao.py  hands.py  jarvis.py  main.py  manager.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: inject-rules.js
.claude/skills/obsidian-project/: SKILL.md
.claude/skills/obsidian-tool/: SKILL.md
.github/workflows/: codeql.yml  tests.yml
.history/: control_20250310184005.py  control_20250310185242.py  control_20250311105407.py  control_20250311105410.py  control_20250317164453.py  control_20250317164502.py  control_20250317164510.py  control_20250317181000.py  control_20250317181003.py  control_20250317181007.py  control_20250317181038.py  control_20250317181046.py  control_20250317181050.py  control_20250317181053.py  control_20250317181059.py  control_20250317181103.py  control_20250317181109.py  control_20250317181123.py  control_20250317181126.py  control_20250317181138.py  control_20250318102830.py  control_20250318103220.py  control_20250318103224.py  control_20250318103226.py  control_20250318103227.py  control_20250318103230.py  control_20250318103232.py  control_20250318103759.py  control_20250320105412.py  control_20250320105425.py  control_20250320105428.py  control_20250320105430.py  control_20250320105432.py  control_20250323105940.py  hands_20250310185226.py  hands_20250317162827.py  jarvis_20250305123530.py  jarvis_20250310185251.py  jarvis_20250310185326.py  jarvis_20250310185414.py  (+25 more)
.history/testes/: control_20250318103255.py  control_20250318103259.py  control_20250318103301.py  main_20250317180455.py  main_20250318103355.py  main_20250318103402.py  main_20250318103409.py  main_20250318103410.py  main_20250318103413.py  main_20250318103415.py  main_20250318103416.py  main_20250318103419.py  main_20250318103420.py  teste_som_20250317180841.py  teste_som_20250317182053.py  teste_som_20250317182109.py  teste_som_20250317182119.py  teste_som_20250317182346.py  teste_som_20250317182400.py  teste_som_20250317182402.py  teste_som_20250317182501.py  teste_som_20250317182503.py  teste_som_20250317182506.py  teste_som_20250317182510.py  teste_som_20250317182516.py  teste_som_20250317182520.py  teste_som_20250317182523.py  teste_som_20250317182528.py  teste_som_20250317182816.py  teste_som_20250317182817.py  teste_som_20250317182819.py  teste_som_20250317182821.py  teste_som_20250317182822.py  teste_som_20250317182828.py  teste_som_20250317182830.py  teste_som_20250317182834.py  teste_som_20250317182839.py  teste_som_20250317182841.py  teste_som_20250317182844.py  teste_som_20250317182847.py  (+45 more)
.obsidian/: app.json  appearance.json  core-plugins-migration.json  graph.json  templates.json
Jarvis-ESP-Frimeware/: CMakeLists.txt
Jarvis_decoder/: CMakeLists.txt  CMakeLists_opencv.txt
Jarvis_decoder/src/app/: main.cpp
Jarvis_decoder/src/app/modules/camera/: camera.cpp  camera.h  camera_system.cpp
Jarvis_decoder/src/includes/app/modules/camera/: camera.h
Lite/: Speak_to_Text.py  Vision_AI_Lite.py
New organized template/: control.py  jarvis.py  main.ipynb
Testes Unitarios/: Foto_audio.ipynb  Jarvis_Genai.ipynb  Piano.ipynb  Teste_Gravar_com_Audio.ipynb  Teste_Jarvis.ipynb  Teste_Jarvis.py  gravacao.py  test_grav.py
Video/: 20241105_205646.avi  20241213_162513.avi  20241216_183643.avi
docs_projeto/: CONVENCOES.md  HOOKS.md  HOWTO.md  README.md
docs_projeto/Jarvis/: Home.md
docs_projeto/Jarvis/00_SGI_Aplicado/: README.md
docs_projeto/Jarvis/01_Gestao/: README.md
docs_projeto/Jarvis/02_Especificacoes/: README.md
docs_projeto/Jarvis/03_Hardware/: README.md
docs_projeto/Jarvis/04_Firmware/: README.md
docs_projeto/Jarvis/05_Software_Auxiliar/: README.md
docs_projeto/Jarvis/06_Testes_Validacao/: BUG-001_Video_Audio_Sem_Executor.md  BUG-002_Recycle_Midia_Sem_Self.md  BUG-003_ProjectConfig_Mkdir_Sem_ExistOk.md  Matriz_Rastreabilidade.base  README.md
docs_projeto/Jarvis/07_Certificacoes_Homologacoes/: README.md
docs_projeto/Jarvis/08_Producao/: README.md
docs_projeto/Jarvis/09_Manuais/: README.md
docs_projeto/Jarvis/10_Referencias/: README.md
docs_projeto/Jarvis/11_Marketing_Comercial/: README.md
docs_projeto/Jarvis/12_Suporte_PosVenda/: README.md
docs_projeto/Jarvis/13_Legal_IP/: README.md
docs_projeto/Jarvis/99_Arquivo_Historico/: README.md
docs_projeto/Jarvis/_templates/: ADR_Template.md  Ata_Template.md  Bug_Template.md  README.md  Release_Template.md  Requisito_Template.md  Simulacao_Template.md  Teste_Template.md
docs_projeto/_views/: Documentos_Obsoletos.base  Documentos_por_Clausula.base  Rascunhos_Pendentes.base
docs_projeto/arquitetura/: 2026-06-27_avaliacao_e_plano_refatoracao.md  README.md
docs_projeto/decisoes/: 2026-05-28_configuracao_obsidian_template.md  2026-06-27_arquitetura_tres_pilares.md  2026-06-27_testes_unitarios.md  2026-06-28_separacao_repos_firmware_app.md  README.md
docs_projeto/docs_Template_Projeto/: Home.md
docs_projeto/docs_Template_Projeto/00_SGI_Aplicado/: README.md
docs_projeto/docs_Template_Projeto/01_Gestao/: README.md
docs_projeto/referencias/: README.md  app-cerebro-android-ondevice.md  audio-i2s-esp32-mems-max98357a-conducao-ossea.md  ble-wifi-video-audio-esp32.md  camera-esp32-csi-dvp-uvc.md  energia-mcu-esp32s3-cliente-fino.md  pytest-mock-total.md  vlm-offline-celular-gemma3n-stt-tts-ptbr.md
scripts/: bootstrap.py
src/app/: controller_main.py
src/jarvis/: __init__.py  __main__.py  app.py  config.py
teste/: teste.py
tests/: conftest.py  test_app.py  test_async_bridge.py  test_capture.py  test_control.py  test_flows.py  test_gestures.py  test_hands.py  test_jarvis.py  test_main.py  test_manager.py  test_project_config.py  test_smoke.py  test_state.py  tests_basic_functions.py  tests_controller_check_audios.py  tests_error_system_logs.py  tests_gemini.py  tests_rules_hands.py
(+262 files in other folders)
