[project]
name = "jarvis-fenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.0.2",
    "google>=3.0.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.15.0",
    "google-generativeai>=0.8.5",
    "google-oauth2-tool>=0.0.3",
    "mediapipe>=0.10.14",
    "mpmath>=1.3.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.5",
    "oauth2client>=4.1.3",
    "opencv-python>=4.11.0.86",
    "os-sys>=0.9.1",
    "pathlib>=1.0.1",
    "pygame>=2.6.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "speechrecognition>=3.14.3",
    "threadpoolctl>=3.6.0",
]
