[project]
name = "jarvis"
version = "0.1.0"
description = "Oculos inteligente: visao computacional (MediaPipe) + IA Gemini + TTS + Google Photos"
requires-python = ">=3.11"
dependencies = [
    # Visao computacional e captura
    "opencv-python",
    "mediapipe",
    "numpy",
    # Audio: reconhecimento de fala (mic) e sintese de voz
    "SpeechRecognition",
    "PyAudio",
    "edge-tts",
    "pygame",
    # IA (Google Gemini)
    "google-generativeai",
    # Config e credenciais (Google Photos via OAuth)
    "python-dotenv",
    "requests",
    "google-auth",
    "google-auth-oauthlib",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.8",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[tool.uv]
# Projeto "virtual": uv gerencia deps e lockfile, mas NAO empacota/instala o
# codigo (modulos ainda na raiz; empacotamento real -> Onda 5, com src/jarvis).
package = false

# ---------------------------------------------------------------------------
# Ruff (lint + format) — config gradual: o codigo legado ainda usa PascalCase
# (Capture_Photo, Map_Ok...), entao a regra de naming (N) NAO entra agora;
# a renomeacao para snake_case acontece na reestruturacao (Onda 5-6).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".claude", "docs_projeto"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # linha longa: comentarios legados em PT-BR; o formatter cuida do codigo
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts e mocks dos testes nao seguem as mesmas regras
"main.py" = ["B023"]  # lambdas dos checks rodam na mesma iteracao (sem captura tardia); Onda 6

# ---------------------------------------------------------------------------
# Mypy — modo gradual: libs sem stubs (cv2, mediapipe, edge_tts, pygame...)
# sao ignoradas; checagem so sobre os modulos de producao na raiz.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["control.py", "main.py", "jarvis.py", "manager.py", "hands.py", "ProjectConfig.py"]

[tool.pytest.ini_options]
# Raiz do repo no sys.path para os testes importarem hands/control/jarvis/...
pythonpath = ["."]
testpaths = ["tests"]
# Funcoes async (jarvis/control) viram testes sem decorator explicito.
asyncio_mode = "auto"
addopts = "-q --cov --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
# Coverage medido apenas sobre o codigo de producao na raiz do repo.
# source=["."] ancora no diretorio do projeto (exclui site-packages); o omit
# tira testes, skills do Claude e docs. Sem isso, padroes como "main.py"
# casariam tambem `_pytest/main.py`/`dotenv/main.py` em site-packages.
source = ["."]
omit = [
    "tests/*",
    ".claude/*",
    "docs_projeto/*",
    "*/site-packages/*",
    "*/scratchpad/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
