[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "0.1.0"
description = "Oculos inteligente: visao computacional (MediaPipe) + IA Gemini + TTS + Google Photos"
requires-python = ">=3.11"
dependencies = [
    # Visao computacional e captura
    "opencv-python",
    "mediapipe",
    "numpy",
    # Audio: reconhecimento de fala (mic) e sintese de voz
    "SpeechRecognition",
    "PyAudio",
    "edge-tts",
    "pygame",
    # IA (Google Gemini)
    "google-generativeai",
    # Config e credenciais (Google Photos via OAuth)
    "python-dotenv",
    "requests",
    "google-auth",
    "google-auth-oauthlib",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.8",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

# Onda 5: empacotamento real. O codigo vive em src/jarvis e e um pacote
# instalavel (build via hatchling). `uv sync`/`pip install -e .` instala em modo
# editavel, habilitando `python -m jarvis`. Os testes NAO dependem da instalacao
# (usam pythonpath=["src","scripts"]), entao o CI (pip puro) segue leve.
[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

# ---------------------------------------------------------------------------
# Ruff (lint + format) — config gradual: o codigo legado ainda usa PascalCase
# (Capture_Photo, Map_Ok...), entao a regra de naming (N) NAO entra agora;
# a renomeacao para snake_case acontece na reestruturacao (Onda 5-6).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".claude", "docs_projeto"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # linha longa: comentarios legados em PT-BR; o formatter cuida do codigo
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts e mocks dos testes nao seguem as mesmas regras
"src/jarvis/core/loop.py" = ["B023"]  # lambdas dos checks rodam na mesma iteracao (sem captura tardia); Onda 6
"main.py" = ["E402"]  # shim: ajusta sys.path antes de importar o pacote jarvis

# ---------------------------------------------------------------------------
# Mypy — modo gradual: libs sem stubs (cv2, mediapipe, edge_tts, pygame...)
# sao ignoradas; checagem so sobre os modulos de producao na raiz.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# mypy_path=src ancora o pacote `jarvis` para resolver imports internos
# (from jarvis.vision import gestures, etc.) sem instalar o pacote.
mypy_path = "src"
files = ["src/jarvis", "scripts/bootstrap.py", "main.py"]

[tool.pytest.ini_options]
# src/ e scripts/ no sys.path: os testes importam o pacote `jarvis` (de src/) e o
# `bootstrap` (de scripts/) SEM precisar instalar o pacote -> CI segue com pip puro.
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
# Funcoes async (jarvis/control) viram testes sem decorator explicito.
asyncio_mode = "auto"
addopts = "-q --cov --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
# Coverage sobre o pacote (src/jarvis) e o bootstrap (scripts/). O omit tira o
# entrypoint __main__ (wiring trivial) e ruidos fora do escopo. O shim main.py da
# raiz fica fora de source, entao nao e medido.
source = ["src", "scripts"]
omit = [
    "tests/*",
    ".claude/*",
    "docs_projeto/*",
    "*/site-packages/*",
    "*/scratchpad/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
